# commy

./: .cargo_lock_from_origin  .gitignore  API_REFACTOR_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_SUMMARY.md  AUTHENTICATION_SETUP.md  BEFORE_AND_AFTER.md  BEGINNERS_GUIDE.md  CHANGELOG.md  CLUSTERING_COMPLETE.md  CLUSTERING_DEPLOYMENT.md  COMPILATION_STATUS.md  COMPILATION_SUCCESS.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  COMPLEX_TYPES_SOLUTIONS.md  Cargo.toml  DEPENDENCY_UPDATE_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_INTEGRATION.md  DOCKER_QUICK_REF.md  Dockerfile  ENTERPRISE_TEST_RESULTS.md  EXAMPLES_DELIVERY_SUMMARY.md  EXAMPLES_GUIDE.md  EXAMPLES_UPDATE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_WORK_ITEMS_1_2_3.md  INTEGRATION_COMPLETE.md  LEARNING_PATH.md  MIGRATION_SUCCESS_REPORT.md  NAVIGATION.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_FFI_DEMO.md  (+61 more)
.github/: copilot-instructions.md
.github/actions/setup-rust/: action.yml
.github/workflows/: auto-merge.yml  capnp-ci.yml  capnp-smoke.yml  capnp_codegen.yml  capnp_smoke.yml  ci-release.yml  ci.yml  ffi-smoke-test.yml
archive/status_sources/: COMPILATION_STATUS.md  COMPILATION_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_COMPLETION_REPORT.md  PROJECT_STATUS.md  PROPOSED_IMPROVEMENTS.md  ROADMAP.md  STATUS.md  TESTING_ROADMAP.md  _README.md
commy_common/: Cargo.toml
commy_common/src/: DEVELOPER.md  lib.rs
commy_macro/: Cargo.toml
commy_macro/src/: lib.rs
commy_macro/tests/: rkyv_writer_compile.rs
docs/: INTEGRATION_PLAN.md  PENDING_ACTION_PINNINGS.md  README.md  auth-refactor.md  ffi_extern_audit.md  getting-started.md  issues_from_proposed_improvements.md  llm_code_review.md  nodejs-sdk.md  proc-macro-design.md  python-sdk.md  rust-api.md
examples/: COMPLETION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  REAL_WORLD_EXAMPLES.md  advanced_transport_demo.rs  basic_mesh_demo.rs  cluster-3-node-local.yaml  cluster-5-node-prod.yaml  consumer.rs  fixed_size_demo.rs  minimal.rs  minimal_alloc_test.rs  multi_format_demo.rs  multi_language_sdk_demo.rs  multiprocess_stress.rs  performance_monitoring_demo.rs  phase1_manager_demo.rs  phase3_ffi_demo.rs  phase3_ffi_demo_simple.rs  polyglot_serialization_demo.rs  raw_binary_foundation_demo.rs  security_features_demo.rs  serialization_demo.rs  simple_consumer.rs  simple_foundation_demo.rs  simple_mesh_demo.rs  simple_producer.rs  simple_transport_demo.rs  simple_zero_copy_demo.rs  stress_intensive.rs  zero_copy_demo.rs
examples/financial_ticker/: Cargo.toml  DESIGN.md  README.md
examples/financial_ticker/src/: lib.rs  models.rs
examples/plugin_example/: Cargo.toml
examples/plugin_example/src/: lib.rs
examples/real_world_chat/: Cargo.toml  DESIGN.md  README.md
examples/real_world_chat/src/: lib.rs  models.rs
include/: commy_ffi.h
migrations/: 001_initial_schema.sql
schemas/: SmokeCapnpExample_06c922a2.capnp  SmokeCapnpExample_06c922a2_capnp.rs  example.capnp  example_capnp.rs
scripts/: create_github_issues.ps1  parse_run_log.py  poll_and_download.ps1  scan_run_log.ps1  test_plugin_loader.ps1  watch_capnp_artifacts.ps1
src/: allocator.rs  auth_methods.rs  clustering.rs  config.rs  containers.rs  error.rs  errors.rs  lib.rs  liveness.rs  main.rs  protocol.rs  revocation.rs  serialization.rs  simple_protocol.rs
src/auth/: mod.rs  permissions.rs  tenant_context.rs
src/capnp_gen/: mod.rs
src/ffi/: core.rs  health.rs  load_balancer.rs  memory.rs  minimal.rs  mod.rs  real.rs  service.rs  test_utils.rs  tests.rs  types.rs  working.rs  working_sync.rs
src/manager/: auth_provider.rs  coordination.rs  core.rs  id_manager.rs  lifecycle.rs  memory_map.rs  mod.rs  mod.rs.backup  network.rs  object_pool.rs  protocol.rs  shared_memory.rs  shared_memory_old.rs  simple.rs  tests.rs  tests_file_request.rs  tests_tls.rs  transport.rs  transport_impl.rs
src/mesh/: health_monitor.rs  load_balancer.rs  mesh_coordinator.rs  mod.rs  node_registry.rs  service_discovery.rs  tests.rs
src/plugins/: loader.rs
src/serialization/: capnproto_backend.rs  raw_binary.rs  rkyv_backend.rs
src/server/: message_router.rs  mod.rs  session_manager.rs  tls.rs  ws_handler.rs
src/server/clustering/: client_failover.rs  config.rs  conflict_resolution.rs  connection.rs  consistency.rs  failover_manager.rs  heartbeat.rs  messages.rs  mod.rs  peer.rs  protocol.rs  registry.rs  replication.rs  session_persistence.rs  snapshots.rs  vector_clocks.rs
src/types/: mod.rs  registry.rs
src/utils/: mod.rs  object_pool.rs  offset_of.rs
tests/: README.md  auth_validation.rs  clustering_comprehensive.rs  comprehensive_tests.rs  consistency_integration.rs  enterprise_full_suite.rs  integration_phase1.rs  integration_test.rs  integration_tests.rs  mesh_foundation_tests.rs  object_pool_concurrency.rs  phase2_memory_mapping_test.rs  plugin_ffi_edges.rs  plugin_integration.rs  plugin_loader.rs  proper_test_example.rs  property_allocate_file_id.proptest-regressions  property_allocate_file_id.rs  proptest_object_pool.rs  simple_integration.rs  simple_phase1_test.rs  smoke_capnp_single_step.rs  storage_backends.rs  stress_pool.rs  test_utils.rs
tests/common/: ffi_helpers.rs
tests/enterprise/: deployment_tests.rs  federation_tests.rs  mod.rs  multi_language_tests.rs  observability_tests.rs  performance_tests.rs  policy_tests.rs  security_tests.rs
