[package]
    authors      = ["Eric Evans <ciresnave@gmail.com>"]
    description  = "A hierarchical, multi-tenant shared memory coordination system for Windows enabling secure, efficient data sharing between multiple processes via WebSocket and direct memory-mapping"
    edition      = "2021"
    license      = "MIT"
    name         = "commy"
    repository   = "https://github.com/ciresnave/commy"
    version      = "0.3.1"

[lib]

[[bin]]
    name = "commy"
    path = "src/main.rs"

[dependencies]
    auth-framework    = "0.4"
    chrono            = { version = "0.4", features = ["serde"] }
    futures           = "0.3"
    libc              = { version = "0.2", optional = true }
    memmap2           = "0.9"
    rmp-serde         = "1.1"
    rustls            = "0.23"
    rustls-pemfile    = "2.0"
    serde             = { version = "1.0", features = ["derive"] }
    serde_json        = "1.0"
    sha2              = "0.10"
    thiserror         = "2.0"
    tokio             = { version = "1", features = ["full"] }
    tokio-rustls      = "0.26"
    tokio-tungstenite = "0.28"
    uuid              = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
    tempfile = "3.8"
