[package]
name = "commy-chat"
version = "1.0.0"
edition = "2021"
authors = ["Commy Contributors"]
license = "Apache-2.0"
description = "Real-time chat system demonstrating Commy's multi-tenant capabilities"

[[bin]]
name = "chat_server"
path = "src/bin/chat_server.rs"

[[bin]]
name = "chat_client"
path = "src/bin/chat_client.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.23"
tokio-tungstenite = "0.23"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"

# Commy dependencies
# Note: Adjust these paths to point to your local Commy installation
# or use the published crates from crates.io when available

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2
